customer registration and login

--- a/XeatsV4/app/src/main/AndroidManifest.xml
+++ b/XeatsV4/app/src/main/AndroidManifest.xml
@@ -9,19 +9,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".sellerSendOtp"></activity>
-        <activity android:name=".sellerForgotPassword" />
-        <activity android:name=".sellerDashboard" />
-        <activity android:name=".sellerVerifyPhone" />
-        <activity android:name=".deliveryRegistration" />
-        <activity android:name=".deliveryLoginPhone" />
-        <activity android:name=".deliveryLoginEmail" />
-        <activity android:name=".customerRegistration" />
-        <activity android:name=".customerLoginPhone" />
-        <activity android:name=".customerLoginEmail" />
-        <activity android:name=".sellerRegistration" />
-        <activity android:name=".sellerLoginPhone" />
-        <activity android:name=".sellerLoginEmail" />
+        <activity android:name=".Customer.CustomerSendOtp"></activity>
+        <activity android:name=".Customer.customerForgotPassword" />
+        <activity android:name=".Customer.customerDashboard" />
+        <activity android:name=".Customer.customerVerifyPhone" />
+        <activity android:name=".Seller.sellerSendOtp" />
+        <activity android:name=".Seller.sellerForgotPassword" />
+        <activity android:name=".Seller.sellerDashboard" />
+        <activity android:name=".Seller.sellerVerifyPhone" />
+        <activity android:name=".Delivery.deliveryRegistration" />
+        <activity android:name=".Delivery.deliveryLoginPhone" />
+        <activity android:name=".Delivery.deliveryLoginEmail" />
+        <activity android:name=".Customer.customerRegistration" />
+        <activity android:name=".Customer.customerLoginPhone" />
+        <activity android:name=".Customer.customerLoginEmail" />
+        <activity android:name=".Seller.sellerRegistration" />
+        <activity android:name=".Seller.sellerLoginPhone" />
+        <activity android:name=".Seller.sellerLoginEmail" />
         <activity android:name=".ChooseOne" />
         <activity android:name=".MainMenu" />
         <activity android:name=".MainActivity">
