--- a/XeatsV4/app/src/main/AndroidManifest.xml
+++ b/XeatsV4/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="ph.ubx.xeatsv4">
 
     <application
@@ -8,8 +9,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Customer.CustomerSendOtp"></activity>
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
+        tools:targetApi="m">
+        <activity android:name=".sellerFoodPanelFragment.seller_postdish"></activity>
+        <activity android:name=".Delivery.deliveryVerifyPhone" />
+        <activity android:name=".Delivery.deliverySendOtp" />
+        <activity android:name=".Delivery.deliveryForgotPassword" />
+        <activity android:name=".Delivery.deliveryDashboard" />
+        <activity android:name=".Customer.CustomerSendOtp" />
         <activity android:name=".Customer.customerForgotPassword" />
         <activity android:name=".Customer.customerDashboard" />
         <activity android:name=".Customer.customerVerifyPhone" />
@@ -28,6 +36,7 @@
         <activity android:name=".Seller.sellerLoginEmail" />
         <activity android:name=".ChooseOne" />
         <activity android:name=".MainMenu" />
+        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
