--- a/XeatsV4/app/src/main/AndroidManifest.xml
+++ b/XeatsV4/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="ph.ubx.xeatsv4">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,7 +14,7 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".sellerFoodPanelFragment.seller_postdish"></activity>
+        <activity android:name=".sellerFoodPanelFragment.seller_postdish"> </activity>
         <activity android:name=".Delivery.deliveryVerifyPhone" />
         <activity android:name=".Delivery.deliverySendOtp" />
         <activity android:name=".Delivery.deliveryForgotPassword" />
@@ -44,6 +46,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".PushNotificationService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
